# evsLM

./: .gitignore  RAG.ipynb  README.md  catdogclass.ipynb  main.ipynb  processed_chunks.txt  pyproject.toml
rag_db/: chroma.sqlite3
utils/: helper.py
